scheduler: Handle mouse wheel event disposition correctly

Previously the renderer scheduler would treat mouse wheel events as
prioritized events, but failed to keep track of whether they were
processed (and preventDefault()'ed) on the main thread or whether they
turned into a smooth scroll gesture. Making this distinction is
important because in the former case the main thread is doing custom
input handling (which we should be careful about scheduling) and in the
latter we are dealing with a regular scroll gesture handled either by
the main or the compositor thread.

This patch fixes the problem by adding explicit processing for the
MouseWheel event and a number of tests which cover all the relevant
scenarios.

BUG=654765

Review-Url: https://codereview.chromium.org/2495593003
Cr-Commit-Position: refs/heads/master@{#431321}

Former-commit-id: 4867673a4d5bad7c3030ac7bab0ee5bf41a6f634